--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       <nav class="navbar">
 
         <div class="navbar-brand">
-          <img src="assets\images\logo (2).png" alt="Logo">
+          <img src="assets\images\2.png" alt="Logo">
         </div>
 
         <ul class="navbar-nav">
@@ -1271,7 +1271,7 @@
       </div>
 
       <p class="copyright">
-        Copyright © 2022 <a href="#">codewithsadee</a>. All rights reserved.
+        Copyright © 2022 <a href="#">Abhisth Chatterji</a>. All rights reserved.
       </p>
 
     </footer>
