--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       <nav class="navbar">
 
         <div class="navbar-brand">
-          <img src="assets\images\2.png" alt="Logo">
+          <img src="" alt="Logo">
         </div>
 
         <ul class="navbar-nav">
@@ -1176,7 +1176,7 @@
         <div class="grid-item">
 
           <div class="footer-logo">
-            <img src="./assets/images/logo-footer.png" alt="educator logo white">
+            <img src="" alt="footer logo white">
           </div>
 
           <p class="footer-text">
