--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         </ul>
 
         <button class="btn btn-primary">
-          <p class="btn-text">Try for free</p>
+         <a href="Sliding-Sign-In-Sign-Up-Form-master\index.html"> <p style="color:white ;" class="btn-text">Sign Up</p> </a>
           <span class="square"></span>
         </button>
 
