--- a/index.html
+++ b/index.html
@@ -66,7 +66,9 @@
         </ul>
 
         <button class="btn btn-primary">
-         <a href="Sliding-Sign-In-Sign-Up-Form-master\index.html"> <p style="color:white ;" class="btn-text">Sign Up</p> </a>
+          <a href="Sliding-Sign-In-Sign-Up-Form-master\index.html">
+            <p style="color:white ;" class="btn-text">Sign Up</p>
+          </a>
           <span class="square"></span>
         </button>
 
@@ -109,19 +111,21 @@
 
           <p class="section-subtitle" style="font-weight:bolder;color: black;">Find Your true North</p>
 
-          <h1 class="main-heading">
-           Find Your True
-            <span class="underline-img" style="color: blue;">Passion <img src="./assets/images/banner-line.png" alt="line"></span>
+          <h1 class="main-heading" style="font-size: 50px;">
+            Find your voice
+            <span class="underline-img" style="color: blue;">In the Chaos<img src="./assets/images/banner-line.png"
+                alt="line"></span>
           </h1>
 
           <p class="section-text" style="color: black; font-weight: strong
           ">
-            We are a team of <b>professional Career Coaches</b>, &#128104 here to help you reach your goal or pivot your goal. We believe<b> you can achieve your goals</b> &#129309 with our support.
+            We are a team of <b>professional Career Coaches</b>, &#128104 here to help you reach and pivot your goal. We
+            believe<b> you can achieve your goals</b> &#129309 with our support.
           </p>
 
           <div class="home-btn-group">
             <button class="btn btn-primary">
-              <p class="btn-text">Explore Courses</p>
+              <p class="btn-text">Explore Us</p>
               <span class="square"></span>
             </button>
 
@@ -161,9 +165,9 @@
 
       <section class="category">
 
-        <p class="section-subtitle">Course Category</p>
+        <!-- <p class="section-subtitle">Course Category</p> -->
 
-        <h2 class="section-title">Explore Popular Courses</h2>
+        <h2 class="section-title">Our Mission</h2>
 
         <ul class="course-item-group">
 
@@ -178,10 +182,14 @@
 
             <div class="course-category-content">
               <h3 class="category-title">
-                <a href="#">Learn Data Science</a>
+                <a href="#">Your Career GPS
+                </a>
               </h3>
 
-              <p class="category-subtitle">Data is Everything</p>
+              <p class="category-subtitle">We aim to guide you along the twisted roads of career planning
+                and lay out a clear, definite path for you to achieve all that you deserve
+                And more!
+              </p>
             </div>
 
           </li>
@@ -198,10 +206,12 @@
 
             <div class="course-category-content">
               <h3 class="category-title">
-                <a href="#">Business Strategy</a>
+                <a href="#">Development</a>
               </h3>
 
-              <p class="category-subtitle">Improve your business</p>
+              <p class="category-subtitle">Career planning is extensive, and so should be your plans for achieving the
+                most out of it. We’re here to ensure the same and enlighten you to ALL that your journey has to offer!
+              </p>
             </div>
 
           </li>
@@ -218,16 +228,17 @@
 
             <div class="course-category-content">
               <h3 class="category-title">
-                <a href="#">Learn Art & Design</a>
+                <a href="#">Align Passion with Purpose</a>
               </h3>
 
-              <p class="category-subtitle">Fun & Challenging</p>
+              <p class="category-subtitle">We help you bridge the gap between your ‘wants’ and ‘needs’ to create a
+                solution that aligns your fortes with your life goals. </p>
             </div>
 
           </li>
 
 
-          <li class="course-category-item">
+          <!-- <li class="course-category-item">
 
             <div class="wrapper">
               <img src="./assets/images/course-category-icon-4.png" alt="category icon" class="category-icon default">
@@ -284,7 +295,7 @@
               <p class="category-subtitle">Fun & Challenging</p>
             </div>
 
-          </li>
+          </li> -->
 
         </ul>
 
@@ -1260,7 +1271,7 @@
 
           <div class="wrapper">
             <input type="text" name="subscribe" placeholder="Email Address">
-            
+
             <button class="send-btn">
               <ion-icon name="paper-plane"></ion-icon>
             </button>
