--- a/index.html
+++ b/index.html
@@ -64,14 +64,14 @@
           </li>
 
         </ul>
-
+<a href="Sliding-Sign-In-Sign-Up-Form-master\index.html">
         <button class="btn btn-primary">
-          <a href="Sliding-Sign-In-Sign-Up-Form-master\index.html">
+         
             <p style="color:white ;" class="btn-text">Sign Up</p>
-          </a>
+          
           <span class="square"></span>
         </button>
-
+      </a>
         <button class="nav-toggle-btn">
           <span class="one"></span>
           <span class="two"></span>
@@ -124,10 +124,12 @@
           </p>
 
           <div class="home-btn-group">
-            <button class="btn btn-primary">
+            <a href="https://www.linkedin.com/company/findyourtruenorth/" target="_blank">
+            <button class="btn btn-primary" >
               <p class="btn-text">Explore Us</p>
               <span class="square"></span>
             </button>
+          </a>
 
             <button class="btn btn-secondary">
               <p class="btn-text">Contact Us</p>
@@ -328,37 +330,44 @@
 
           <!-- <p class="section-subtitle">About Us</p> -->
 
-          <h2 class="section-title">We Have Best Online Education</h2>
+          <h2 class="section-title">About Us</h2>
 
-          <p class="section-text">
-            Morbi porttitor ligula id varius consectetur. Integer ipsum justo, congue sit amet massa vel, porttitor
-            semper magna.
-            Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
+          <p class="section-text" style="color: black;font-weight: bold;">
+            We provide a proprietary career
+            construction platform which has solutions for students ranging from K-12 to undergraduates and post
+            graduates, helping them align their passion with purpose.Find Your True North is a proprietary career
+            coaching platform which support
+            students and professionals to assess and create a career portrait of self for efficiency
+            and a wholesome
+            life.
+
           </p>
-
+           <br>
           <ul class="about-ul">
 
             <li>
               <ion-icon name="checkmark-circle"></ion-icon>
-              <p>Suspendisse nunc massa, pellentesque eu nibh eget.</p>
+              <p>
+                We use a dynamic, non-linear process to help people create their identity.</p>
             </li>
-
+<br>
             <li>
               <ion-icon name="checkmark-circle"></ion-icon>
-              <p>Suspendisse nunc massa, pellentesque eu nibh eget.</p>
+              <p>Through articulating their life story with the help of a coach.</p>
             </li>
-
+<br>
             <li>
               <ion-icon name="checkmark-circle"></ion-icon>
-              <p>Suspendisse nunc massa, pellentesque eu nibh eget.</p>
+              <p>FYTN becomes your GPS on the journey of your Life.
+              </p>
             </li>
 
           </ul>
 
-          <button class="btn btn-primary">
+          <!-- <button class="btn btn-primary">
             <p class="btn-text">Explore More</p>
             <span class="square"></span>
-          </button>
+          </button> -->
 
         </div>
 
