--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
           <div class="img-box">
 
             <img src="./assets/images/banner-img-bg.png" alt="colorful background shape" class="background-shape">
-            <img src="./assets/images/banner-img.png" alt="banner image" class="banner-img">
+            <img src="./assets/images/toppng.com-indian-college-student-386x615.png" alt="banner image" class="banner-img">
 
             <img src="./assets/images/banner-aliment-icon-1.png" alt="" class="icon-1 smooth-zigzag-anim-1" width="250">
             <img src="./assets/images/banner-aliment-icon-2.png" alt="" class="icon-2 smooth-zigzag-anim-2" width="240">
@@ -318,7 +318,7 @@
           <div class="img-box">
             <img src="./assets/images/about-img-bg.png" alt="about bg" class="about-bg">
 
-            <img src="./assets/images/about-img.png" alt="about person" class="about-img">
+            <img src="./assets/images/banner-img (2).png" alt="about person" class="about-img">
 
             <img src="./assets/images/banner-aliment-icon-1.png" alt="" class="icon-1 smooth-zigzag-anim-1" width="250">
             <img src="./assets/images/banner-aliment-icon-3.png" alt="" class="icon-2 smooth-zigzag-anim-3" width="195">
@@ -381,7 +381,7 @@
         - #COURSE SECTION
       -->
 
-      <section class="course" id="course">
+      <section class="course" id="course" hidden>
 
         <p class="section-subtitle">Our Online Courses</p>
 
@@ -867,7 +867,7 @@
         - #INSTRUCTOR SECTION
       -->
 
-      <section class="instructor">
+      <section class="instructor" hidden>
 
         <p class="section-subtitle">Best Coach</p>
 
@@ -1248,7 +1248,7 @@
 
         </ul>
 
-        <ul class="grid-item">
+        <ul class="grid-item" >
 
           <h4 class="item-heading">Other Link</h4>
 
