--- a/index.html
+++ b/index.html
@@ -64,14 +64,14 @@
           </li>
 
         </ul>
-<a href="Sliding-Sign-In-Sign-Up-Form-master\index.html">
-        <button class="btn btn-primary">
-         
+        <a href="Sliding-Sign-In-Sign-Up-Form-master\index.html">
+          <button class="btn btn-primary">
+
             <p style="color:white ;" class="btn-text">Sign Up</p>
-          
-          <span class="square"></span>
-        </button>
-      </a>
+
+            <span class="square"></span>
+          </button>
+        </a>
         <button class="nav-toggle-btn">
           <span class="one"></span>
           <span class="two"></span>
@@ -125,11 +125,11 @@
 
           <div class="home-btn-group">
             <a href="https://www.linkedin.com/company/findyourtruenorth/" target="_blank">
-            <button class="btn btn-primary" >
-              <p class="btn-text">Explore Us</p>
-              <span class="square"></span>
-            </button>
-          </a>
+              <button class="btn btn-primary">
+                <p class="btn-text">Explore Us</p>
+                <span class="square"></span>
+              </button>
+            </a>
 
             <button class="btn btn-secondary">
               <p class="btn-text">Contact Us</p>
@@ -144,7 +144,8 @@
           <div class="img-box">
 
             <img src="./assets/images/banner-img-bg.png" alt="colorful background shape" class="background-shape">
-            <img src="./assets/images/toppng.com-indian-college-student-386x615.png" alt="banner image" class="banner-img">
+            <img src="./assets/images/toppng.com-indian-college-student-386x615.png" alt="banner image"
+              class="banner-img">
 
             <img src="./assets/images/banner-aliment-icon-1.png" alt="" class="icon-1 smooth-zigzag-anim-1" width="250">
             <img src="./assets/images/banner-aliment-icon-2.png" alt="" class="icon-2 smooth-zigzag-anim-2" width="240">
@@ -342,7 +343,7 @@
             life.
 
           </p>
-           <br>
+          <br>
           <ul class="about-ul">
 
             <li>
@@ -350,12 +351,12 @@
               <p>
                 We use a dynamic, non-linear process to help people create their identity.</p>
             </li>
-<br>
+            <br>
             <li>
               <ion-icon name="checkmark-circle"></ion-icon>
               <p>Through articulating their life story with the help of a coach.</p>
             </li>
-<br>
+            <br>
             <li>
               <ion-icon name="checkmark-circle"></ion-icon>
               <p>FYTN becomes your GPS on the journey of your Life.
@@ -1169,7 +1170,7 @@
         <div class="contact-card" id="contact">
           <img src="./assets/images/cta-bg-img.png" alt="shape" class="contact-card-bg">
 
-          <h2>Start Your Best Online Classes With Us</h2>
+          <h2>Start Your Journey With Us</h2>
 
           <button class="btn btn-primary">
             <p class="btn-text">Contact Us</p>
@@ -1200,20 +1201,19 @@
           </div>
 
           <p class="footer-text">
-            Duis a tempor magna. Maecenas ligula felis, imperdiet quis arcu eget, blandit ultricies risus. Vivamus
-            fringilla urna
-            vel risus congue accumsan.
+            A dream does not become reality through magic; it takes sweat, determination, and hard work.I'm a great
+            believer in luck, and I find the harder I work, the more I have of it.
           </p>
 
           <div class="social-link">
             <a href="#">
               <ion-icon name="logo-facebook"></ion-icon>
             </a>
-            <a href="#">
+            <a href="https://www.instagram.com/fytruenorth/?igshid=NmNmNjAwNzg%3D" target="=blank">
               <ion-icon name="logo-instagram"></ion-icon>
             </a>
-            <a href="#">
-              <ion-icon name="logo-twitter"></ion-icon>
+            <a href="https://www.linkedin.com/company/findyourtruenorth/" target="_blank">
+              <ion-icon name="logo-linkedin"></ion-icon>
             </a>
             <a href="#">
               <ion-icon name="logo-youtube"></ion-icon>
@@ -1248,7 +1248,7 @@
 
         </ul>
 
-        <ul class="grid-item" >
+        <ul class="grid-item">
 
           <h4 class="item-heading">Other Link</h4>
 
@@ -1291,7 +1291,7 @@
       </div>
 
       <p class="copyright">
-        Copyright © 2022 <a href="#">Abhisth Chatterji</a>. All rights reserved.
+        Copyright © 2022 <a href="#">Find Your Trure North</a>. All rights reserved.
       </p>
 
     </footer>
