--- a/index.html
+++ b/index.html
@@ -795,7 +795,7 @@
         - #FEATURES SECTION
       -->
 
-      <section class="features">
+      <!-- <section class="features" hidden="hidden">
 
         <div class="features-left">
 
@@ -852,11 +852,11 @@
 
           </ul>
 
-        </div>
+        </div> -->
 
-        <div class="features-right">
+        <!-- <div class="features-right">
           <img src="./assets/images/coure-features-img.jpg" alt="core features image">
-        </div>
+        </div> -->
 
       </section>
 
@@ -868,7 +868,7 @@
         - #INSTRUCTOR SECTION
       -->
 
-      <section class="instructor" hidden>
+      <!-- <section class="instructor" hidden>
 
         <p class="section-subtitle">Best Coach</p>
 
@@ -982,7 +982,7 @@
 
         </div>
 
-      </section>
+      </section> -->
 
 
 
